--- a/netflix-clone/index.html
+++ b/netflix-clone/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/netflix_icon_161073.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Netflix Clone by Bitania</title>
   </head>
   <body>
     <div id="root"></div>
