--- a/netflix-clone/index.html
+++ b/netflix-clone/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./public/netflix_icon_161073.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netflix Clone by Bitania</title>
+    <title>Netflix Clone</title>
   </head>
   <body>
     <div id="root"></div>
